grpc_springboot_demo/istio/networking/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grpc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 9001
        name: http
        protocol: HTTP
      hosts:
        - '*'
    - port:
        number: 6565
        name: grpc
        protocol: GRPC
      hosts:
        - '*'
