grpc_springboot_demo/istio/networking/consumer-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: consumer-dr
spec:
  host: consumer
  subsets:
    - name: v1
      labels:
        version: v1
