grpc_springboot_demo/istio/networking/consumer-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: consumer-vs
spec:
  hosts:
    - consumer
  http:
    - route:
        - destination:
            host: consumer
            subset: v1
