grpc_springboot_demo/istio/networking/provider-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: provider-dr
spec:
  host: provider
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
